Corrected authentication provider flow and added same user authorization on me and conversation get or created routes