@@ -4,6 +4,7 @@ import com.chatapp.synk.dto.UserDTO;
 import com.chatapp.synk.dto.UserStatusDTO;
 import com.chatapp.synk.response.SuccessResponse;
 import com.chatapp.synk.security.JwtUtil;
+import com.chatapp.synk.security.SecurityUtil;
 import com.chatapp.synk.service.UserService;
 
 import io.jsonwebtoken.Claims;
@@ -37,7 +38,8 @@ public class UserController {
         List<UserDTO> users = userService.getAllUsers();
         if (users.isEmpty()) {
             logger.warn("No users found");
-            return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.NOT_FOUND, "No users found", Collections.emptyList()));
+            return ResponseEntity
+                    .ok(new SuccessResponse<>(HttpStatus.NOT_FOUND, "No users found", Collections.emptyList()));
         }
         return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.OK, "Users fetched successfully", users));
     }
@@ -49,27 +51,31 @@ public class UserController {
             return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.OK, "User fetched", List.of(userOpt)));
         } else {
             logger.warn("User with ID {} not found", id);
-            return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.NOT_FOUND, "User not found", Collections.emptyList()));
+            return ResponseEntity
+                    .ok(new SuccessResponse<>(HttpStatus.NOT_FOUND, "User not found", Collections.emptyList()));
         }
     }
 
     @PutMapping("/{id}")
     public ResponseEntity<SuccessResponse<UserDTO>> updateUser(@PathVariable String id, @RequestBody UserDTO userDTO) {
         UserDTO updatedUser = userService.updateUser(id, userDTO);
-        return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.OK, "User updated successfully", List.of(updatedUser)));
+        return ResponseEntity
+                .ok(new SuccessResponse<>(HttpStatus.OK, "User updated successfully", List.of(updatedUser)));
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<SuccessResponse<Void>> deleteUser(@PathVariable String id) {
         userService.deleteUser(id);
-        return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.OK, "User deleted successfully", Collections.emptyList()));
+        return ResponseEntity
+                .ok(new SuccessResponse<>(HttpStatus.OK, "User deleted successfully", Collections.emptyList()));
     }
 
     @GetMapping("/lastActiveStatus")
     public ResponseEntity<SuccessResponse<UserStatusDTO>> getLastActiveUserStatus(@RequestParam String userId) {
         if (userId == null || userId.isEmpty()) {
             logger.warn("No user ID provided for status check");
-            return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.BAD_REQUEST, "No user ID provided", Collections.emptyList()));
+            return ResponseEntity
+                    .ok(new SuccessResponse<>(HttpStatus.BAD_REQUEST, "No user ID provided", Collections.emptyList()));
         }
         // this is will give the last active status of multiple users, as user can be
         // active in multiple devices, so we will return the list of status of all
@@ -77,33 +83,29 @@ public class UserController {
         List<UserStatusDTO> result = userService.getLastActiveUserStatus(userId);
         if (result.isEmpty()) {
             logger.warn("No status found for user ID {}", userId);
-            return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.NOT_FOUND, "No status found", Collections.emptyList()));
+            return ResponseEntity
+                    .ok(new SuccessResponse<>(HttpStatus.NOT_FOUND, "No status found", Collections.emptyList()));
         }
         return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.OK, "User statuses fetched", result));
     }
 
     @GetMapping("/me")
-    public ResponseEntity<SuccessResponse<UserDTO>> getUserMe(HttpServletRequest request) {
-        // Get Claims directly from request attribute set by JwtAuthFilter
-        // frontend only sends token. We parse it once in the filter, and set all claims in request attribute.
-        Claims userDetails = (Claims) request.getAttribute("userDetails");
+    public ResponseEntity<SuccessResponse<UserDTO>> getUserMe() {
 
-        if (userDetails == null) {
+        String userId = SecurityUtil.getCurrentUserIdFromSecurityContext();
+
+        if (userId == null || userId.isBlank()) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(new SuccessResponse<>(HttpStatus.UNAUTHORIZED, "User details not found", Collections.emptyList()));
+                    .body(new SuccessResponse<>(HttpStatus.UNAUTHORIZED,"User is not authenticated",Collections.emptyList()));
         }
 
-        // Now extract any information without re-parsing the token
-        String id = jwtUtil.extractId(userDetails);
-        // List<String> roles = jwtUtil.extractRoles(userDetails);
+        UserDTO user = userService.getUserById(userId);
 
-        if (id != null) {
-            UserDTO userOpt = userService.getUserById(id);
-            if (userOpt != null) {
-                return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.OK, "User fetched", List.of(userOpt)));
-            }
-        } 
+        if (user == null) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(new SuccessResponse<>(HttpStatus.NOT_FOUND, "User not found", Collections.emptyList()));
+        }
 
-        return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.NOT_FOUND, "User ID not found in token", Collections.emptyList()));
+        return ResponseEntity.ok(new SuccessResponse<>(HttpStatus.OK, "User fetched successfully", List.of(user)));
     }
 }
